--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "ethers": "^5.7.2",
+    "graphql": "^16.6.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "urql": "^3.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
